# peerpedia-web

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  LICENSE  NOTICE  README.md  README.zh.md  STATUS.md  TEST_USERS.txt  codecov.yml  package-lock.json  peerpedia.db-shm  peerpedia.db-wal  peerpedia.db.bak  pyproject.toml  seed.py
.github/workflows/: ci.yml
backend/: peerpedia.db-shm  peerpedia.db-wal  pyproject.toml
backend/peerpedia_api/: deps.py  helpers.py  main.py
backend/peerpedia_api/policies/: __init__.py  articles.py  repo.py
backend/peerpedia_api/routes/: articles.py  auth.py  bookmarks.py  citations.py  compile.py  feed.py  merge.py  pool.py  reviews.py  search.py  users.py
backend/peerpedia_api/routes/articles/: __init__.py  _crud.py  _git.py  _publish.py  _router.py
backend/peerpedia_api/schemas/: article.py  auth.py  common.py  review.py  user.py
backend/tests/: conftest.py  test_author_repair.py  test_compiler.py  test_deps_direct.py  test_e2e_specs.py  test_health.py  test_main.py  test_repo_security.py  test_routes_articles.py  test_routes_auth.py  test_routes_git.py  test_routes_git_extra.py  test_routes_more.py  test_routes_pool_bookmarks.py  test_routes_reviews.py  test_routes_search.py  test_routes_users.py  test_schemas.py  test_seed_driven.py  test_spec_article_sync.py  test_spec_bookmark_journey.py  test_spec_multi_author.py  test_spec_server_connectivity.py  test_spec_user_sync.py  test_user_journeys.py
backend/tests/integration/: test_health_e2e.sh
core/: pyproject.toml
core/peerpedia_core/: exceptions.py
core/peerpedia_core/config/: __init__.py  params.py
core/peerpedia_core/policies/: __init__.py  articles.py
core/peerpedia_core/storage/: compiler.py  git_backend.py
core/peerpedia_core/storage/db/: __init__.py  crud_article.py  crud_bookmark.py  crud_citation.py  crud_merge.py  crud_review.py  crud_user.py  engine.py  models.py  session_utils.py
core/peerpedia_core/types/: messages.py  scores.py
core/peerpedia_core/workflow/: reputation.py  scoring.py  sedimentation.py
core/tests/: __init__.py  conftest.py  test_crud.py  test_exceptions.py  test_git_backend.py  test_models.py  test_params.py  test_policies.py  test_policy_articles.py  test_reputation.py  test_sedimentation_publish.py  test_session_utils.py  test_types.py  test_workflow.py
design/: brainstorm.md  content-strategy.md  outline.md  self-test-checklist.md
design-system/peerpedia/: MASTER.md
docs/: DESIGN.en.md  DESIGN.md  ENG-REVIEW-2026-06-07.md  README.md  api-contract.json  authority-matrix.md  bugs.md  gpt_review.md  phase2-p0-plan.md  plan_article_authors_migration.md  plan_phase2_1_online_polish.md  plan_reshape.md  temporarily_save.md  vision.md
docs/architecture/: 00-overview.md  01-network-sync.md  02-stores-and-state.md  03-pages-and-routing.md  04-backend-api.md  05-tauri-rust.md  06-compilation.md  07-testing-and-quality.md  08-code-review-results.md  DESIGN.en.md  README.md
docs/archive/: bugs.md
docs/decisions/: decisions.md
docs/learn/: 00-system-map.md  01-core.md  02-backend.md  03-frontend.md  04-tauri-desktop.md  05-database.md  06-compiler.md  07-sync-network.md  08-auth-identity.md  README.md  decisions.md
docs/plans/: 2026-06-10-typst-syntax-highlighting.md  2026-06-10-vscode-tabs-implementation.md  README.md  implementation-plan-2026-06-10.md  plan_article_authors_migration.md  step-1-bookmark-self-rejection.md  step-2-typst-svg-dark-theme.md  step-3-format-choice-modal.md  step-4-bookmark-guards-and-fix.md  step-5-delete-button-unified.md  step-6-tab-drawer-design.md  step-7-color-hardcoding-cleanup.md  step-final-verification.md
docs/reviews/: debug-follow-button-retrospective.md
docs/specs/: 2026-06-06-reputation-profile-design.md  2026-06-09-self-hosted-deployment-design.md  newneed.md  test_requirement.md
frontend/: .env.example  comment_need.md  index.html  need.md  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  test_drafts.cjs  test_drafts.mjs  vite.config.ts
frontend/coverage/: clover.xml  coverage-final.json  index.html
frontend/src/: App.vue  env.d.ts  main.ts  test-setup.ts
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/src/: commands.rs  db.rs  error.rs  lib.rs  local_auth.rs  local_git.rs  local_store.rs  main.rs
frontend/src-tauri/tests/: test_commands.rs
frontend/src/api/: articles.ts  (+12 more)
peerpedia/: __init__.py  mirror.py  submit.py
peerpedia/cli/: __init__.py  article_commands.py  main.py  social_commands.py  user_commands.py
peerpedia/config/: __init__.py  settings.py
peerpedia/web/: __init__.py  app.py  db_session.py
peerpedia_core/: __init__.py
peerpedia_core/governance/: __init__.py  pip.py
peerpedia_core/protocol/: __init__.py  addressing.py  messages.py  signing.py
peerpedia_core/reputation/: __init__.py  v1.py
peerpedia_core/storage/: __init__.py  compiler.py  db.py  git_backend.py
peerpedia_core/workflow/: citations.py  collaboration.py  contribution.py  edit_proposal.py  lan.py  review.py  state_machine.py  versioning.py
scripts/: add_copyright_headers.py  migrate_architecture.py  migrate_article_authors.py  repro_articles_500.sh
tests/: __init__.py  test_click_tracking.py  test_collaboration.py  test_compiler.py  test_contribution.py  test_db.py  test_editor.py  test_fork_merge.py  test_lan.py  test_protocol.py  test_reputation.py  test_review_workflow.py  test_sedimentation_pool.py  test_submit.py  test_user_api.py  test_user_profile.py
(+174 files in other folders)
