[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "peerpedia"
version = "0.1.0"
description = "Decentralized academic publishing protocol — replacing arXiv and academic journals"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Chenqi Meng", email = "mcqgravity@gmail.com"}
]
dependencies = [
    "click>=8.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "jinja2>=3.0",
    "gitpython>=3.1",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "networkx>=3.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["core/tests", "backend/tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 130

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"core/tests/**" = ["E501"]
"backend/tests/**" = ["E501"]
"seed.py" = ["E501"]

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = false
[[tool.mypy.overrides]]
module = "peerpedia_core.storage.db.*"
disable_error_code = ["assignment"]
[[tool.mypy.overrides]]
module = [
    "peerpedia.mirror",
    "peerpedia.submit",
    "peerpedia_core.workflow.collaboration",
    "peerpedia_core.workflow.contribution",
    "peerpedia_core.workflow.edit_proposal",
    "peerpedia_core.workflow.lan",
    "peerpedia_core.workflow.lan_network",
    "peerpedia_core.workflow.review",
]
disable_error_code = ["assignment", "arg-type", "attr-defined", "return-value"]
