[project]
name = "peerpedia-api"
version = "0.3.0"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.0",
    "fastapi>=0.100",
    "pyjwt>=2.0",
    "uvicorn>=0.20",
    "sqlalchemy>=2.0",
    "peerpedia-core",
    "python-multipart>=0.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "httpx>=0.24",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
