[project]
name = "peerpedia-core"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "gitpython>=3.1",
    "networkx>=3.0",
    "jinja2>=3.0",
    "bcrypt>=4.0",
    "pyjwt>=2.0",
    "markdown>=3.0",
    "httpx>=0.24",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
