[package]
name = "peerpedia"
version = "0.1.0"
edition = "2021"
description = "PeerPedia — offline academic writing desktop app"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
bcrypt = "0.15"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tokio = { version = "1", features = ["sync", "rt"] }
log = "0.4"
env_logger = "0.11"

[build-dependencies]
tauri-build = { version = "2", features = [] }
